// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlainButton should have giga link styles 1`] = `
.circuit-0 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 15px;
  line-height: 24px;
  margin-bottom: 0;
  box-shadow: none;
  border: none;
  background: none;
  font-weight: normal;
  padding: 0;
  color: #9DA7B1;
  cursor: pointer;
  outline: none;
}

@media (min-width:480px) {
  .circuit-0 {
    font-size: 18px;
    line-height: 28px;
  }
}

.circuit-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.circuit-0:active {
  color: #212933;
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  size="giga"
  target={null}
>
  Button
</button>
`;

exports[`PlainButton should have kilo link styles 1`] = `
.circuit-0 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 13px;
  line-height: 20px;
  margin-bottom: 0;
  box-shadow: none;
  border: none;
  background: none;
  font-weight: normal;
  padding: 0;
  color: #9DA7B1;
  cursor: pointer;
  outline: none;
}

@media (min-width:480px) {
  .circuit-0 {
    font-size: 13px;
    line-height: 20px;
  }
}

.circuit-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.circuit-0:active {
  color: #212933;
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  size="kilo"
  target={null}
>
  Button
</button>
`;

exports[`PlainButton should have mega link styles 1`] = `
.circuit-0 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 15px;
  line-height: 24px;
  margin-bottom: 0;
  box-shadow: none;
  border: none;
  background: none;
  font-weight: normal;
  padding: 0;
  color: #9DA7B1;
  cursor: pointer;
  outline: none;
}

@media (min-width:480px) {
  .circuit-0 {
    font-size: 15px;
    line-height: 24px;
  }
}

.circuit-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.circuit-0:active {
  color: #212933;
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  size="mega"
  target={null}
>
  Button
</button>
`;

exports[`PlainButton should have primary styles 1`] = `
.circuit-0 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 15px;
  line-height: 24px;
  margin-bottom: 0;
  box-shadow: none;
  border: none;
  background: none;
  font-weight: normal;
  padding: 0;
  color: #9DA7B1;
  cursor: pointer;
  outline: none;
  color: #3388FF;
}

@media (min-width:480px) {
  .circuit-0 {
    font-size: 15px;
    line-height: 24px;
  }
}

.circuit-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.circuit-0:active {
  color: #212933;
}

.circuit-0:active {
  color: #1641AC;
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  size="mega"
  target={null}
>
  Button
</button>
`;

exports[`PlainButton should render with default styles 1`] = `
.circuit-0 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 15px;
  line-height: 24px;
  margin-bottom: 0;
  box-shadow: none;
  border: none;
  background: none;
  font-weight: normal;
  padding: 0;
  color: #9DA7B1;
  cursor: pointer;
  outline: none;
}

@media (min-width:480px) {
  .circuit-0 {
    font-size: 15px;
    line-height: 24px;
  }
}

.circuit-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.circuit-0:active {
  color: #212933;
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  size="mega"
  target={null}
>
  Link
</button>
`;

exports[`PlainButton should render with href 1`] = `
.circuit-0 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 15px;
  line-height: 24px;
  margin-bottom: 0;
  box-shadow: none;
  border: none;
  background: none;
  font-weight: normal;
  padding: 0;
  color: #9DA7B1;
  cursor: pointer;
  outline: none;
}

@media (min-width:480px) {
  .circuit-0 {
    font-size: 15px;
    line-height: 24px;
  }
}

.circuit-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.circuit-0:active {
  color: #212933;
}

<a
  className="circuit-0 circuit-1"
  disabled={false}
  href="example"
  size="mega"
  target={null}
>
  Button
</a>
`;
